@@ -1,3 +1,7 @@
+2006-05-17  Xavier Claessens  <xclaesse@gmail.com>
+
+	* libempathy-gtk/gossip-chat.c: Display ChatState.
+
 2006-05-16  Xavier Claessens  <xclaesse@gmail.com>
 
 	* libempathy-gtk/empathy-status-icon.c:
